--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "RentACar": "Server=.;Database=RentACarDb;Trusted_Connection=true;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
