--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "RentACar": "Server=.;Database=RentACarDb;Trusted_Connection=true;TrustServerCertificate=True"
   },
+  "CacheSettings": {
+    "SlidingExpiration": "2" 
+  },
   "AllowedHosts": "*"
 }
